Add title and meta

--- a/html/comp1510.html
+++ b/html/comp1510.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
     <meta charset="utf-8"> 
-    <title>My BCIT Project</title>
-    <meta name="comp1930 boilerplate code" content="my bcit project">
-    <meta name="author" content="BCIT">
+    <title>COMP 1510</title>
+    <meta name="COMP 1510 LOADING PAGE" content="listing assignments in course">
+    <meta name="William, Adam, Charlie" content="Chronos">
   
     <!-- Bootstrap for Mobile-first -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
