--- a/html/comp1510.html
+++ b/html/comp1510.html
@@ -54,7 +54,7 @@
   </div>
 </nav>
 
-    <div class="list-group">
+    <div class="list-group" style="margin: auto 0">
   <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">List group item heading</h5>
