--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             padding:0;
         }
         #imageBg {
-            background-image: url(bgPics/colorful.jpg);
+            background-image: url(bgPics/texture1.jpg);
             background-size:cover;
             background-repeat:repeat;
             height: 100%;
@@ -57,7 +57,7 @@
         }
         #lol {
             width: 100%;
-            background-color: lightgreen;
+            background-color: azure;
             height: 6%;
             
         }
@@ -113,6 +113,6 @@
 	</script>
 
     </div>
-    <footer id="lol"> he</footer>
+    <footer id="lol"> CopyRight</footer>
 </body>
 </html>
