--- a/Course.html
+++ b/Course.html
@@ -59,7 +59,9 @@
       border-radius: 25px;
         
     }
-
+      .linkBox {
+          color:black;
+      }
     .boxInner p {
       margin: 0;
       padding: 10px;
@@ -146,8 +148,8 @@
 
       <div class="box">
         <div class="boxInner">
-          <p>COMP1100-Program Fundamentals</p>
-          <div class="titleBox">Items Due: 3</div>
+          <a class="linkBox" href="html/comp1100.html"><p>COMP1100-Program Fundamentals</p>
+              <div class="titleBox">Items Due: 3</div></a>
         </div>
       </div>
       <div class="box">
