Revising link communication

--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"> 
     <title>COMP 1930</title>
-    <meta name="COMP 1930 LOADING PAGE" content="listing assignments in course">
+    <meta name="COMP 1100 LOADING PAGE" content="listing assignments in course">
     <meta name="William, Adam, Charlie" content="Chronos">
   
     <!-- Bootstrap for Mobile-first -->
@@ -21,7 +21,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Chronos</a>
+  <a class="navbar-brand" href="../Course.html">Chronos</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -49,7 +49,7 @@
     </ul>
   </div>
 </nav>
-<div id="titleBar" style= "text-align: center"> COMP 1930 </div>
+<div id="titleBar" style= "text-align: center"> COMP 1100 </div>
     <div class="list-group">
   <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
