--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				}
 			},
 			// Will use popup for IDP Providers sign-in flow instead of the default, redirect.
-			signInFlow: 'redirect',
+			signInFlow: 'popup',
 			signInSuccessUrl: 'Course.html',
 			signInOptions: [
 				// Leave the lines as is for the providers you want to offer your users.
