--- a/Course.html
+++ b/Course.html
@@ -35,8 +35,8 @@
     body {
       height: auto;
       background-image: url(GeometricGradientBackgrounds/BlueTealYellow.jpg);
-      background-repeat: space;
-      background-size: auto auto;
+      background-repeat: round;
+      background-size: 100% auto;
       font-family: 'PT Sans Narrow', sans-serif;
     }
 
