--- a/Course.html
+++ b/Course.html
@@ -64,7 +64,8 @@
       bottom: 10px;
       overflow: hidden;
       border-radius: 25px;
-      box-shadow: 10px 10px 10px -6px rgba(132, 29, 179, 0.8);
+/*      box-shadow: 10px 10px 10px -6px rgba(132, 29, 179, 0.8);*/
+      box-shadow: 7px 7px 10px -5px black;
       max-width: 400px;
       max-height: 500px;
     }
@@ -94,10 +95,10 @@
       padding: 10px;
       width: 100%;
       height: 70%;
-      background-color: orange;
+      background-color: white;
       text-align: center;
       /* adds opacity and maxwidth and height*/
-      background: rgba(29, 154, 179, 0.5);
+/*      background: rgba(29, 154, 179, 0.5);*/
 
 
 
