--- a/Course.html
+++ b/Course.html
@@ -25,6 +25,7 @@
 /*    Imported fonts*/
     
     @import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Yeon+Sung&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
     
     html,
     body {
@@ -71,7 +72,7 @@
     }
 
     #homepagetitle {
-      font-family: 'Yeon Sung';
+      font-family: 'Cinzel';
       font-size: 30pt;
       margin: 0 auto;
       padding: 0;
