--- a/html/comp1116.html
+++ b/html/comp1116.html
@@ -17,6 +17,18 @@
     <!-- Optional styles and scripts of your own -->
     <!-- <link rel="stylesheet" href="styles/style.css">-->
     <!-- <script src="scripts/script.js"></script>-->
+    <style>
+      .dueBox {
+        margin: 10px;
+        align-content: center;
+        float: none;
+        width: 95%;
+        background-color: lightblue;
+        color: black;
+        border: 1px solid gray;
+      }
+
+    </style>
 </head>
 
 <body>
@@ -49,9 +61,9 @@
     </ul>
   </div>
 </nav>
-<div id="titleBar" style= "text-align: center"> COMP 1930 </div>
+<div id="titleBar" style= "text-align: center"> COMP 1116 </div>
     <div class="list-group">
-  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+  <a href="#!" class="dueBox list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">List group item heading</h5>
       <small>3 days ago</small>
@@ -59,7 +71,7 @@
     <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
     <small>Donec id elit non mi porta.</small>
   </a>
-  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+  <a href="#!" class="dueBox list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">List group item heading</h5>
       
@@ -67,7 +79,7 @@
     <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
     <small class="text-muted">Donec id elit non mi porta.</small>
   </a>
-  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+  <a href="#!" class="dueBox list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">List group item heading</h5>
       <small class="text-muted">3 days ago</small>
