Revision on main

--- a/main.html
+++ b/main.html
@@ -221,7 +221,7 @@
       <div class="media">
   <div class="media-body">
     <h3 id="mainOne" class="mt-0 mb-1">What is Chronos</h3>
-      <img id="chronos1" class="d-flex ml-3" src="bgPics/Data_analysis_PNG.png" alt="Generic placeholder image"><p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+      <img id="chronos1" class="d-flex ml-3" s="bgPics/Data_analysis_PNG.png" alt="Generic placeholder image"><p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
   </div>
   
 </div>
