--- a/html/postingForm.html
+++ b/html/postingForm.html
@@ -25,7 +25,7 @@
         <div> </div>
 
 <!--        adding style="backgroundcolor:yellow" without bglight allows change in color-->
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: aqua">
+  <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="../Course.html"><img src="../bgPics/logoChronos.png" width="30" height="30" class="d-inline-block align-top" alt=""><span id="ok">Chronos</span> </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
