--- a/html/form.html
+++ b/html/form.html
@@ -13,13 +13,13 @@
         <div class="content">
 <!-- adding margin bottom to create separation of form and list -->
 <!-- onsubmit will allow time for js to load into firebase and refresh afterwards for future rendering -->
-            <form id="add-cafe-form" style="margin-bottom: 7%" >
-                <input type="text" name="name" placeholder="Cafe name">
-                <input type="text" name="city" placeholder="Cafe city">
+            <form id="add-work-form" style="margin-bottom: 7%" >
+                <input type="text" name="name" placeholder="Assignment">
+                <input type="text" name="city" placeholder="Due date">
                 <button id="myButton">Add to List!</button>
             </form>
 
-            <ul id="cafe-list"></ul>
+            <ul id="work-list"></ul>
 
         </div>
 
