--- a/html/form.html
+++ b/html/form.html
@@ -13,13 +13,13 @@
         <div class="content">
 <!-- adding margin bottom to create separation of form and list -->
 <!-- onsubmit will allow time for js to load into firebase and refresh afterwards for future rendering -->
-            <form id="add-work-form" style="margin-bottom: 7%" >
+            <form id="add-1930-form" style="margin-bottom: 7%" >
                 <input type="text" name="name" placeholder="Assignment">
-                <input type="text" name="city" placeholder="Due date">
+                <input type="date" name="dueDate" placeholder="Due date">
                 <button id="myButton">Add to List!</button>
             </form>
 
-            <ul id="work-list"></ul>
+            <ul id="COMP1930-list"></ul>
 
         </div>
 
@@ -30,14 +30,13 @@
         <script>
             // Initialize Firebase
             var firebaseConfig = {
-                apiKey: "AIzaSyBoltocm_xJbkfN5YmW4mgp_1F65JG36LY",
-                authDomain: "chronos1-3cda9.firebaseapp.com",
-                databaseURL: "https://chronos1-3cda9.firebaseio.com",
-    projectId: "chronos1-3cda9",
-    storageBucket: "chronos1-3cda9.appspot.com",
-    messagingSenderId: "87589827078",
-    appId: "1:87589827078:web:4344da6990f21159f60987",
-    measurementId: "G-YL9SB7ZG40"
+                apiKey: "AIzaSyDxcuP8iqbfPbtYPwAFh04xEc3SZ-JlNqs",
+                authDomain: "chronos-c7366.firebaseapp.com",
+                databaseURL: "https://chronos-c7366.firebaseio.com",
+                projectId: "chronos-c7366",
+                storageBucket: "chronos-c7366.appspot.com",
+                messagingSenderId: "821932163722",
+                appId: "1:821932163722:web:7531781e1df6f497342373"
             };
             // Initialize Firebase
   
