--- a/html/comp1100.html
+++ b/html/comp1100.html
@@ -122,7 +122,7 @@
     }
 
     body {
-      background-image: url(blueiso.png);
+      background-image: url(../bgPics/blueiso.png);
     }
 
     .custom {
