Form Date parsing

--- a/html/form.html
+++ b/html/form.html
@@ -15,7 +15,7 @@
 <!-- onsubmit will allow time for js to load into firebase and refresh afterwards for future rendering -->
             <form id="add-1930-form" style="margin-bottom: 7%" >
                 <input type="text" name="name" placeholder="Assignment">
-                <input type="date" name="dueDate" placeholder="Due date">
+                <input type="date" name="dueDate" required="required" placeholder="Due date">
                 <button id="myButton">Add to List!</button>
             </form>
 
