--- a/html/calendar.html
+++ b/html/calendar.html
@@ -402,7 +402,8 @@
   }
     #homepagetitle {
         font-size: 55px;
-        font-family: Cinzel
+        font-family: Cinzel;
+        padding-left: 25px;
     }
     
     .navbar-toggler-icon {
@@ -412,7 +413,7 @@
     }
 
     #navbarStyle {
-        font-size: 50px;
+        font-size: 45px;
     }
 
     /* touching up on the links inside the nav bar */
@@ -484,6 +485,7 @@
       margin: 15px auto;
       min-height: 45px;
       padding: 20px 0 20px 0;
+      width: 75%;
 
     }
 
