Calendar styling edits

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -85,18 +85,19 @@
         .event-cancelled {
           display: inline;
           padding: 0 10px;
-          font-size: 50px;
           overflow-wrap: break-word;
         }
 
         .event-count {
-          color: #52A0FD;
+          font-size: 45px;    
           text-align: right;
         }
         
         .event-name {
+          font-size: 50px;
           padding-right: 0;
           text-align: left;
+          color: #52A0FD;
         }
         .event-cancelled {
             color: #FF1744;
@@ -955,7 +956,7 @@
             console.log(n + " Number Input: " + desc);
             var event_card = $("<div class='event-card'></div>");
             var event_name = $("<div class='event-name'>" + n + ":</div>");
-            var event_info = $("<div class='event-count'>" + desc + " Invited</div>");
+            var event_info = $("<div class='event-count'>" + desc + "</div>");
           $(event_card).append(event_name).append(event_info);
           $(".events-container").append(event_card);
           })
