--- a/html/comp1510.html
+++ b/html/comp1510.html
@@ -3,8 +3,10 @@
 <html lang="en">
 
 <head>
+  <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
   <meta charset="utf-8">
-  <title>COMP 1510</title>
+  <title>COMP 1712</title>
   <meta name="COMP 1510 LOADING PAGE" content="listing assignments in course">
   <meta name="William, Adam, Charlie" content="Chronos">
 
@@ -15,93 +17,43 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <!-- Firebase related things -->
-
-  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
-  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
-
-  <!-- Add Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
-
-
-  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-
-  <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyDxcuP8iqbfPbtYPwAFh04xEc3SZ-JlNqs",
-      authDomain: "chronos-c7366.firebaseapp.com",
-      databaseURL: "https://chronos-c7366.firebaseio.com",
-      projectId: "chronos-c7366",
-      storageBucket: "chronos-c7366.appspot.com",
-      messagingSenderId: "821932163722",
-      appId: "1:821932163722:web:7531781e1df6f497342373"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    var db = firebase.firestore();
-
-  </script>
-
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
+    .list-group {
 
-    html,
-    body {
-      margin: 0px;
-      padding: 0px;
     }
-
-    body {
-      background-image: url(../bgPics/blueiso.png);
-      font-family: "Cinzel";
-    }
-
-    #titlebar {
-      font-size: 20pt;
-      text-align: center;
-      padding-top: 10px;
-      font-weight: 600;
-    }
-
-    #itemlist {
-      padding-left: 10px;
-      padding-right: 10px;
-    }
-
-    .itemsdue {
+    .list-group-item {
+      background: linear-gradient(135deg, #b7deed 0%, #71ceef 70%, #21b4e2 96%, #b7deed 100%);
       border-style: solid;
-      border-width: 1px;
-      background-color: white;
-      margin-top: 20px;
-    }
+      height: 100%;
+      margin: 10px;
+      width: 95%;
 
-    .itemtitle {
-      font-size: 20pt;
-      text-align: center;
-      font-weight: 600;
     }
-
-    .itemdescription {
-      font-size: 10pt;
+    
+    .navbar {
+      background-color: rgba(29, 120, 179, 0.6);
     }
+  </style>
 
-    .itemduedate {
-      font-size: 10pt;
+  <!-- Optional styles and scripts of your own -->
+  <!-- <link rel="stylesheet" href="styles/style.css">-->
+  <!-- <script src="scripts/script.js"></script>-->
+  <style>
+    .testing {
+      width: 92%;
+      height: 100px;
+      align-content: center;
+      margin-left: 10px;
+      margin-bottom: 5px;
+      border-radius: 5px;
+      background-color: lightblue;
+      border: solid black 1px;
     }
-
   </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#">Chronos</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -128,39 +80,94 @@
           <a class="nav-link" href="#">Log Out</a>
         </li>
       </ul>
-
     </div>
   </nav>
 
-  <div id="titlebar"> COMP 1510 </div>
-
-  <!--  <div id="itemlist">-->
-  <!--
-    <div class="itemsdue">
-      <p class="itemtitle">Quiz #1</p>
-      <p class="itemdescription">Details..........</p>
-      <p class="itemduedate"><span class="due">Due: </span>November 22, 2019</p>
-    </div>
-
-    <div class="itemsdue">
-      <p class="itemtitle">Quiz #2</p>
-      <p class="itemdescription">Details..........</p>
-      <p class="itemduedate"><span class="due">Due: </span>November 22, 2019</p>
-    </div>
--->
-
+  <div id="titleBar" style="text-align: center"> COMP 1712 </div>
   <div class="list-group">
     <ul id="COMP1930-list"></ul>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
+  <script>
+    // Initialize Firebase
+    var firebaseConfig = {
+      apiKey: "AIzaSyDxcuP8iqbfPbtYPwAFh04xEc3SZ-JlNqs",
+      authDomain: "chronos-c7366.firebaseapp.com",
+      databaseURL: "https://chronos-c7366.firebaseio.com",
+      projectId: "chronos-c7366",
+      storageBucket: "chronos-c7366.appspot.com",
+      messagingSenderId: "821932163722",
+      appId: "1:821932163722:web:7531781e1df6f497342373"
+    };
+    // Initialize Firebase
 
-  <!--  </div>-->
+
+    firebase.initializeApp(firebaseConfig);
+
+    const db = firebase.firestore();
+    const settings = {
+      /* your settings... */
+      timestampsInSnapshots: true
+    };
 
 
+    db.settings({
+      timestampsInSnapshots: true
+    });
+  </script>
+  <script>
+    const workList = document.querySelector('.list-group');
+
+    function renderWork(doc) {
+      let li = document.createElement('a');
+      li.classList.add("testing", "list-group-item", "list-group-item-action", "flex-column", "align-items-start");
+      let name = document.createElement('div');
+      let dueDate = document.createElement('p');
+      let cross = document.createElement('div');
+
+      var stringMonth = doc.data().dueDate + '';
+      var res = stringMonth.split("-"); // turn the date into a list format (Split by / if needed)
+      var months = ["Jan", "Feb", "March", "April", "May", "June", "July",
+        "August", "September", "October", "November", "December"
+      ];
+
+      dueDate.textContent = (months[res[1] - 1] + " " + [res[2]] + ", " + [res[0]]);
+
+      li.setAttribute('data-id', doc.id);
+      name.textContent = doc.data().name;
+
+      li.appendChild(name);
+      li.appendChild(dueDate);
+      li.appendChild(cross);
+
+      workList.appendChild(li);
+
+      // deleting data
+      cross.addEventListener('click', (e) => {
+        e.stopPropagation();
+        let id = e.target.parentElement.getAttribute('data-id');
+        db.collection('COMP1930').doc(id).delete();
+      });
+    }
+    // real-time listener
 
 
+    db.collection("COMP1930").orderBy("dueDate", "desc").onSnapshot(snapshot => {
+      let changes = snapshot.docChanges();
+      changes.forEach(change => {
 
+        console.log(change.doc.data());
 
+        if (change.type == 'added') {
+          renderWork(change.doc);
 
+        } else if (change.type == 'removed') {
+          let li = workList.querySelector('[data-id=' + change.doc.id + ']');
+          workList.removeChild(li);
+        }
+      });
 
+    });
+  </script>
 
-  < /body> < /html>
+</body></html>
