--- a/html/comp1116.html
+++ b/html/comp1116.html
@@ -6,8 +6,8 @@
   <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
   <meta charset="utf-8">
-  <title>COMP 1712</title>
-  <meta name="COMP 1510 LOADING PAGE" content="listing assignments in course">
+  <title>COMP 1116</title>
+  <meta name="COMP 1116 LOADING PAGE" content="listing assignments in course">
   <meta name="William, Adam, Charlie" content="Chronos">
 
   <!-- Bootstrap for Mobile-first -->
@@ -18,9 +18,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <style>
-    .list-group {
-
-    }
     .list-group-item {
       background: linear-gradient(to left, #1e5799 0%,#2989d8 86%);
       border-style: solid;
@@ -36,13 +33,27 @@
   <!-- <script src="scripts/script.js"></script>-->
   <style>
     .testing {
-      width: 92%;
+      color: black;
+      width: 94%;
       height: 100px;
+      padding-top: 0px;
+      padding-left: 5px;
       align-content: center;
       margin-left: 10px;
       margin-bottom: 5px;
       border-radius: 5px;
       border: solid black 1px;
+    }
+    li div:nth-child(1) {
+      font-size: 15pt;
+    }
+    li div:nth-child(2) {
+      font-size: 10pt;
+    }
+    li p {
+      font-size: 12pt;
+      position: absolute;
+      top: 75%;
     }
   </style>
 </head>
@@ -80,7 +91,7 @@
 
   <div id="titleBar" style="text-align: center"> COMP 1116 </div>
   <div class="list-group">
-    <ul id="COMP1930-list"></ul>
+    <ul id="COMP1116-list"></ul>
   </div>
   <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-analytics.js"></script>
   <script>
@@ -114,26 +125,28 @@
     const workList = document.querySelector('.list-group');
 
     function renderWork(doc) {
-      let li = document.createElement('a');
+      let li = document.createElement('li');
       li.classList.add("testing", "list-group-item", "list-group-item-action", "flex-column", "align-items-start");
       let name = document.createElement('div');
       let dueDate = document.createElement('p');
       let cross = document.createElement('div');
+      let description = document.createElement('div');
 
       var stringMonth = doc.data().dueDate + '';
       var res = stringMonth.split("-"); // turn the date into a list format (Split by / if needed)
       var months = ["Jan", "Feb", "March", "April", "May", "June", "July",
         "August", "September", "October", "November", "December"
       ];
-
+      description.textContent = doc.data().description;
       dueDate.textContent = (months[res[1] - 1] + " " + [res[2]] + ", " + [res[0]]);
 
       li.setAttribute('data-id', doc.id);
       name.textContent = doc.data().name;
 
       li.appendChild(name);
+      li.appendChild(description);
       li.appendChild(dueDate);
-      li.appendChild(cross);
+      
 
       workList.appendChild(li);
 
